@@ -110,7 +110,7 @@ void PreferencesDialog::loadPrefs()
 
 	edGpsPort->setText(M_PREFS->getGpsPort());
 
-	edMaxDistNodes->setText(QString().setNum(M_PREFS->getMaxDistNodes()));
+	sbMaxDistNodes->setValue(M_PREFS->getMaxDistNodes());
 
 	bbUseProxy->setChecked(M_PREFS->getProxyUse());
 	edProxyHost->setText(M_PREFS->getProxyHost());
@@ -222,7 +222,7 @@ void PreferencesDialog::savePrefs()
 #endif 
 	M_PREFS->setGpsPort(edGpsPort->text());
 
-	M_PREFS->setMaxDistNodes(edMaxDistNodes->text().toDouble());
+	M_PREFS->setMaxDistNodes(sbMaxDistNodes->value());
 
 	M_PREFS->setProxyUse(bbUseProxy->isChecked());
 	M_PREFS->setProxyHost(edProxyHost->text());
