@@ -20,9 +20,17 @@
       <enum>QTabWidget::North</enum>
      </property>
      <property name="currentIndex" >
-      <number>1</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="tab_7" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>624</width>
+        <height>436</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Locale</string>
       </attribute>
@@ -94,6 +102,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tab_4" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>624</width>
+        <height>436</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Visual</string>
       </attribute>
@@ -446,6 +462,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tab_5" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>624</width>
+        <height>436</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Style</string>
       </attribute>
@@ -540,6 +564,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tabTemplate" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>624</width>
+        <height>436</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Template</string>
       </attribute>
@@ -627,6 +659,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tabData" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>624</width>
+        <height>436</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Data</string>
       </attribute>
@@ -725,20 +765,14 @@
             <item>
              <widget class="QLabel" name="label_25" >
               <property name="text" >
-               <string>Don't connect GPX nodes separated by more than (km)</string>
+               <string>Don't connect GPX nodes separated by more than (in km; 0 to disable)</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QLineEdit" name="edMaxDistNodes" >
-              <property name="minimumSize" >
-               <size>
-                <width>30</width>
-                <height>0</height>
-               </size>
-              </property>
-              <property name="frame" >
-               <bool>true</bool>
+             <widget class="QDoubleSpinBox" name="sbMaxDistNodes" >
+              <property name="singleStep" >
+               <double>0.100000000000000</double>
               </property>
              </widget>
             </item>
@@ -763,6 +797,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tab_6" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>624</width>
+        <height>436</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>GPS</string>
       </attribute>
@@ -847,6 +889,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tab" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>624</width>
+        <height>436</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Network</string>
       </attribute>
@@ -923,6 +973,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tab_2" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>624</width>
+        <height>436</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Background Image</string>
       </attribute>
@@ -1018,6 +1076,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tabTools" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>624</width>
+        <height>436</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Tools</string>
       </attribute>
